gts-macros/tests/compile_fail/traits_no_schema_in_chain.stderr
error[E0080]: evaluation panicked: struct_to_gts_schema: `traits` values were provided but no `traits_schema` is declared anywhere in this type's chain; a trait shape must exist for the values to validate against
  --> tests/compile_fail/traits_no_schema_in_chain.rs:19:1
   |
19 | / #[struct_to_gts_schema(
20 | |     dir_path = "schemas",
21 | |     base = BaseV1,
22 | |     type_id = "gts.x.app.entities.thing.v1~x.app.child.thing.v1~",
...  |
25 | |     traits = serde_json::json!({ "retention": "P30D" }),
26 | | )]
   | |__^ evaluation of `_` failed here
